# scholar-master-skill-pack

./: .gitignore  CLAUDE.md  PROJECT_STATE.md  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.render.txt  requirements.txt
.claude/: CLAUDE.md  settings.json
api/: requirements.txt  server.py
config/: autogen.yaml  evidence.yaml  evidence_gate.yaml  models.yaml  pipeline.yaml  prompts.yaml  quality_gates.yaml  retrieval.yaml  scholar.yaml
eval/: golden_questions.md  hallucination_tests.md  transfer_tests.md
method_cards/: index.md
prompts/: concept_extraction.md  evidence_audit.md  evidence_auditor_agent.md  evidence_extraction.md  final_writer_agent.md  global_policy.md  method_card_distillation.md  method_mapper_agent.md  paper_card_extraction.md  research_designer_agent.md  research_paradigm_synthesis.md  revision_planner_agent.md  risk_reviewer_agent.md  scholar_answer.md  scholar_mentor_agent.md  task_decomposer_agent.md  thinking_model_agent.md  thinking_model_distillation.md  wiki_update_protocol.md
schemas/: evidence.schema.json  method_card.schema.json  paper_card.schema.json  qa_eval.schema.json  thinking_model.schema.json  wiki_page.schema.json
scholar_skill/: SKILL.md  answer_policy.md  evidence_policy.md  examples.md  method_transfer_template.md  paper_critique_template.md  research_design_template.md  scholar_briefing.md
scripts/: build_backlinks.py  check_evidence_coverage.py  check_wiki_links.py  compile_skill.py  export_snapshot.py  parse_pdfs.py  run_quality_gates.py  setup_project.py  (+6 more)
(+191 files in other folders)
